# alarmclock-cli

./: README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
alarmclock/: __init__.py  __main__.py  cli.py  clock.py  models.py  notifier.py  runner.py  scheduling.py  storage.py
docs/: design.md
tests/: test_models.py  test_runner.py  test_scheduling.py  test_storage.py
