[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "alarmclock"
version = "0.1.0"
description = "A tiny, dependency-free CLI alarm clock."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Varun" }]

# No runtime dependencies — standard library only.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
alarm = "alarmclock.cli:main"

[tool.setuptools]
packages = ["alarmclock"]

[tool.pytest.ini_options]
testpaths = ["tests"]
